--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -17,6 +17,8 @@
   },
   "devDependencies": {
     "@ignite-ui/eslint-config": "*",
+    "@ignite-ui/react": "*",
+    "@ignite-ui/tokens": "*",
     "@storybook/addon-essentials": "^7.6.6",
     "@storybook/addon-interactions": "^7.6.6",
     "@storybook/addon-links": "^7.6.6",
