--- a/packages/docs/.eslintrc.json
+++ b/packages/docs/.eslintrc.json
@@ -1,6 +1,3 @@
 {
-  "extends": "@ignite-ui/eslint-config",
-  "rules": {
-    "react/no-unescaped-entities": "off"
-  }
+  "extends": "@ignite-ui/eslint-config"
 }
