--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -4,12 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint src/**/*.ts* --fix",
-    "preview": "vite preview",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "dev": "storybook dev -p 6006",
+    "build": "storybook build",
+    "lint": "eslint src/**/*.ts* --fix"
   },
   "dependencies": {
     "polished": "^4.2.2",
