--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint src/**/*.ts* --fix"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.0.15",
     "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
