Addon de acessibilidade

--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.0.15",
+    "@storybook/addon-a11y": "^7.6.7",
     "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
