--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -3,6 +3,7 @@
   "license": "MIT",
   "private": true,
   "main": "index.js",
+  "version": "1.0.1",
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
     "eslint": "^8.56.0"
